# rail-comfort-score-api

./: .dockerignore  .env.example  .flake8  .gitignore  3_to_5_tier_upgrade_plan.md  5_TIER_UPGRADE_IMPLEMENTATION_PLAN.md  CLAUDE.md  COMFORT_SCORE_UPGRADE_SPEC.md  DEPLOYMENT_TROUBLESHOOTING.md  Dockerfile  MODEL_COMPARISON_REPORT.md  PROJECT_STATUS.md  README.md  README_DEPLOYMENT.md  THRESHOLD_ANALYSIS_REPORT.md  ai_notes.md  debug_api_predictions.py  debug_feature_values.py  debug_time_predictions.py  deploy.sh  docker-compose.yml  example_batch_request.py  pyproject.toml  quick_train_5tier.py  requirements.txt  tasks.md  test_api.py  test_api_5tier.py  test_docker_locally.sh  test_exact_api_params.py  train_5tier_simple.py  verify_deployment_readiness.sh
api/: main.py  train_comfort_api_lookups.sqlite
data/: train_journey_legs.db
models/: feature_encoders.joblib  feature_list.joblib  feature_scaler.joblib  model_metadata.joblib  target_encoder.joblib  xgboost_comfort_classifier.joblib
notebooks/: 01_data_exploration.ipynb
src/: analysis_occupancy_distribution.py  api_data_preparation.py  create_sample_data.py  data_exploration.py  feature_engineering.py  feature_selection.py  target_definition_simple.py  target_definition_simple_5tier.py  target_variable_definition.py  xgboost_model_training.py
